@startuml
class TodoListApplication extends Application  {
    'start the scene
    start()
}
class FXMLController implements Initializable {
    ' set the FXML components buttons, menubar, listview, etc

    -addEvent()
       'adds an event to the listview
    -clearList()

    'deletes a selected item from the list
    -deleteList()
    'method to get the item
    'method to delete the item

    -saveList()
    'gets an onAction event from the user
    'calls the class ListOptions and the method saveList

    -loadList()
    'call ListOptions and method loadList

    -editList()
    ' calls editList class to turn into an editable cell
    ' allows for checking the cell if the user want to show
    ' their item is completed

}

FXMLController --o ListObject

class ListObject {
   'creates a list object
    -String description
    -LocalDate date

    +ListObject(String description, LocalDate date)

    +getDescription()
    +setDescription()
    +getLocalDate()
    +setLocalDate()


}
FXMLController --o editList

class editList {
      'can edit both date and description by creating an editable cell
      createListCellFactory()
      'create a listview cell using cell factory
      editCell()
}
FXMLController --o ListOptions
class ListOptions {
    'load and save belong together
    +saveList()
    +loadList()
}

@enduml